# bargozin-desktop

./: CODE_OF_CONDUCT  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  performance_issue.md
.github/workflows/: publish.yml
config/: dockerRegistry.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/dns/: mod.rs
src-tauri/src/docker/: get_manifest.rs  mod.rs
src-tauri/src/utils/: mod.rs
src/components/: alert.tsx  download-result-item.tsx  layout.tsx  loading.tsx  people-item.tsx  sidebar-item.tsx  sidebar.tsx  spinner.tsx  test-result-item.tsx
src/components/svg/: arrow-left.tsx  bargozin.tsx  check-icon.tsx  clipboard.tsx  docker.tsx  double-chevron-down.tsx  download.tsx  github.tsx  info.tsx  linkedin.tsx  question.tsx  retry.tsx  search.tsx  team.tsx  web.tsx  x-icon.tsx
src/pages/: about.tsx  docker.tsx  domain-test.tsx  download.tsx
