[package]
name = "bargozin"
version = "0.1.0"
description = "Bargozin"
authors = ["vesal_j"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], default-features = false }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full", "process"] }
regex = "1.5"
url = "2.4"
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
colored = "2.0"
dirs = "5.0"
trust-dns-resolver = "0.23"
lazy_static = "1.4"
serde_yaml = "0.9"
# Docker registry testing
tar = "0.4"
flate2 = "1.0"
